2014-01-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use ‘(guile-baux common)’ procs.

	* runtest.in: Arrange to add ‘@abs_top_srcdir@/build-aux’
	to the ‘%load-path’ in the Guile invocation.
	* testing.scm (fs): Delete proc.
	(guile-baux common): Add ‘use-modules’ form.
	(d/c): Use ‘fso’.
	(fresh!): Use ‘die’.
	* alive.scm: Use ‘fso’.
	* basic.scm (ok?): Likewise.
	(ftype-name): Use ‘fs’.
	(test:pg-guile-pg-loaded, test:make-connection)
	(test:parameter-status, test:server-version): Use ‘fso’.
	(test:load-records): Use ‘fs’.
	(test:pg-exec-params): Use ‘fso’, ‘fs’.
	(test:pg-exec-prepared single): Use ‘fso’.
	(test:pg-exec-prepared spin): Use ‘fs’.
	(test:pg-exec-prepared): Likewise.
	(test:asynchronous-retrieval): Likewise.
	(test:request-cancel): Use ‘fso’.
	* meta.scm (VIEWS): Use ‘fs’.
	* types-table.scm (-fs, fs, fso): Delete procs.
	(mgr, sel/check): Use ‘fso’.
	(expect-bad-defs): Use ‘fs’.

2014-01-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Fix bug: Do "COMMIT TRANSACTION" after cancel.

	Long-standing omission from original 2005-08-24.

	* basic.scm (test:request-cancel): After tuples validation,
	don't hardcode success rv; instead, issue "COMMIT TRANSACTION"
	and return success only if that command is successful.

2014-01-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use ‘truly_up’ more.

	* fake-cluster-control (truly_down, 1): ...here.

2014-01-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use "DROP DATABASE IF EXISTS".

	* testing.scm (d/c): Don't take 2nd arg SEVERITY; instead,
	take REST; use it to construct the command for ‘pg-exec’;
	if the result is not ‘ok?’ say "FATAL" in the output message.
	(drop!, fresh!): Update calls to ‘d/c’.

2014-01-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Make ‘d/c’ take symbols, not strings.

	* testing.scm (d/c): ...here.
	(drop!, fresh!): Update calls to ‘d/c’.

2014-01-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Remove lame synchronization delays.
